[package]
name = "winapi"
version = "0.3.0-alpha.0"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "Raw FFI bindings for all of Windows API."
documentation = "https://retep998.github.io/doc/winapi/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32", "com", "directx"]
categories = ["external-ffi-bindings", "no-std", "os::windows-apis"]
license = "MIT/Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "LICENSE-APACHE", "build.rs", "README.md"]
build = "build.rs"

[badges]
travis-ci = { repository = "retep998/winapi-rs", branch = "master" }
appveyor = { repository = "retep998/winapi-rs", branch = "master", service = "github" }

[target.i686-pc-windows-gnu.dependencies]
winapi-i686-pc-windows-gnu = { version = "0.3", path = "i686" }
[target.x86_64-pc-windows-gnu.dependencies]
winapi-x86_64-pc-windows-gnu = { version = "0.3", path = "x86_64" }

[features]
std = []
everything = []
#km
#mmos
#shared
basetsd = []
bcrypt = []
bugcodes = []
cderr = []
cfg = []
d3d9 = []
d3d9caps = []
d3d9types = []
devguid = []
devpkey = []
devpropdef = []
dxgi = []
dxgi1_2 = []
dxgi1_3 = []
dxgi1_4 = []
dxgi1_5 = []
dxgiformat = []
dxgitype = []
guiddef = []
hidclass = []
hidpi = []
hidsdi = []
hidusage = []
inaddr = []
ksmedia = []
lmcons = []
minwindef = []
mmreg = []
ntddser = []
ntdef = []
ntstatus = []
rpcndr = []
sspi = []
usb = []
usbiodef = []
windef = []
windowsx = []
winerror = []
wtypes = []
wtypesbase = []
#ucrt
#um
"gl-gl" = []
audioclient = []
audiosessiontypes = []
avrt = []
cfgmgr32 = []
cguid = []
combaseapi = []
coml2api = []
commctrl = []
commdlg = []
consoleapi = []
corsym = []
d2d1 = []
d2d1_1 = []
d2d1effects = []
d2d1effectauthor = []
d2dbasetypes = []
d3d10 = []
d3d10shader = []
d3d11 = []
d3d11shader = []
d3d11on12 = []
d3d12 = []
d3d12sdklayers = []
d3d12shader = []
d3dcommon = []
d3dcompiler = []
dbghelp = []
dcommon = []
docobj = []
documenttarget = []
dpapi = []
dsgetdc = []
dsound = []
dsrole = []
dwmapi = []
dwrite = []
dwrite_1 = []
dwrite_2 = []
dwrite_3 = []
errhandlingapi = []
fileapi = []
handleapi = []
heapapi = []
http = []
imm = []
libloaderapi = []
lmaccess = []
lmdfs = []
lmerrlog = []
lmjoin = []
lsalookup = []
memoryapi = []
minschannel = []
minwinbase = []
mmdeviceapi = []
mmsystem = []
mscat = []
mssip = []
ncrypt = []
oaidl = []
objbase = []
objidl = []
objidlbase = []
ocidl = []
oleauto = []
pdh = []
processthreadsapi = []
propidl = []
propkeydef = []
propsys = []
prsht = []
psapi = []
setupapi = []
shellapi = []
spapidef = []
strmif = []
unknwnbase = []
vsserror = []
winbase = []
wincodec = []
wincon = []
wincrypt = []
winevt = []
wingdi = []
wininet = []
winineti = []
winioctl = []
winnt = []
winreg = []
winsock2 = []
winuser = []
xinput = []
#vc
excpt = []
limits = []
vadefs = []
vcruntime = []
#winrt
activation = []
hstring = []
inspectable = []
