[package]
name = "winapi"
version = "0.3.0-alpha.0"
authors = ["Peter Atashian <retep998@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Raw FFI bindings for all of Windows API."
documentation = "https://retep998.github.io/doc/winapi/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32", "com", "directx"]
categories = ["external-ffi-bindings", "no-std", "os::windows-apis"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/build.rs", "/README.md"]
build = "build.rs"

[package.metadata.docs.rs]
features = ["everything"]
default-target = "x86_64-pc-windows-msvc"

[badges]
travis-ci = { repository = "retep998/winapi-rs", branch = "master" }
appveyor = { repository = "retep998/winapi-rs", branch = "master", service = "github" }

[target.i686-pc-windows-gnu.dependencies]
winapi-i686-pc-windows-gnu = { version = "0.3", path = "i686" }
[target.x86_64-pc-windows-gnu.dependencies]
winapi-x86_64-pc-windows-gnu = { version = "0.3", path = "x86_64" }

[features]
everything = []
std = []
#km
#mmos
#shared
basetsd = []
bcrypt = []
bugcodes = []
cderr = []
cfg = []
d3d9 = []
d3d9caps = []
d3d9types = []
dcomptypes = []
devguid = []
devpkey = []
devpropdef = []
dinputd = []
dxgi = []
dxgi1_2 = []
dxgi1_3 = []
dxgi1_4 = []
dxgi1_5 = []
dxgiformat = []
dxgitype = []
guiddef = []
hidclass = []
hidpi = []
hidsdi = []
hidusage = []
in6addr = []
inaddr = []
ksmedia = []
lmcons = []
minwindef = []
mmreg = []
mstcpip = []
ntddscsi = []
ntddser = []
ntdef = []
ntstatus = []
processsnapshot = []
qos = []
rpc = []
rpcdce = []
rpcndr = []
sspi = []
usb = []
usbiodef = []
windef = []
windowsx = []
winerror = []
wnnc = []
ws2def = []
ws2ipdef = []
wtypes = []
wtypesbase = []
#ucrt
#um
"gl-gl" = []
audioclient = []
audiosessiontypes = []
avrt = []
cfgmgr32 = []
cguid = []
combaseapi = []
coml2api = []
commapi = []
commctrl = []
commdlg = []
commoncontrols = []
consoleapi = []
corsym = []
d2d1 = []
d2d1_1 = []
d2d1_2 = []
d2d1effectauthor = []
d2d1effects = []
d2d1effects_1 = []
d2d1effects_2 = []
d2dbasetypes = []
d3d10 = []
d3d10_1 = []
d3d10_1shader = []
d3d10effect = []
d3d10misc = []
d3d10sdklayers = []
d3d10shader = []
d3d11 = []
d3d11_1 = []
d3d11on12 = []
d3d11sdklayers = []
d3d11shader = []
d3d12 = []
d3d12sdklayers = []
d3d12shader = []
d3dcommon = []
d3dcompiler = []
dbghelp = []
dcommon = []
dcomp = []
dcompanimation = []
dde = []
ddraw = []
ddrawi = []
ddrawint = []
dinput = []
dmksctl = []
dmusicc = []
docobj = []
documenttarget = []
dpa_dsa = []
dpapi = []
dsgetdc = []
dsound = []
dsrole = []
dvp = []
dwmapi = []
dwrite = []
dwrite_1 = []
dwrite_2 = []
dwrite_3 = []
dxdiag = []
dxfile = []
dxgidebug = []
errhandlingapi = []
fileapi = []
handleapi = []
heapapi = []
http = []
imm = []
ioapiset = []
ktmw32 = []
libloaderapi = []
lmaccess = []
lmalert = []
lmapibuf = []
lmat = []
lmdfs = []
lmerrlog = []
lmjoin = []
lmmsg = []
lmremutl = []
lmrepl = []
lmserver = []
lmshare = []
lmstats = []
lmsvc = []
lmuse = []
lmwksta = []
lsalookup = []
memoryapi = []
minschannel = []
minwinbase = []
mmdeviceapi = []
mmeapi = []
mmsystem = []
msaatext = []
mscat = []
mssip = []
nb30 = []
ncrypt = []
ntsecapi = []
oaidl = []
objbase = []
objidl = []
objidlbase = []
ocidl = []
oleauto = []
olectl = []
pdh = []
playsoundapi = []
processthreadsapi = []
propidl = []
propkeydef = []
propsys = []
prsht = []
psapi = []
reason = []
restrictederrorinfo = []
rmxfguid = []
sapi = []
sapi51 = []
sapi53 = []
sapiddk = []
sapiddk51 = []
schannel = []
securitybaseapi = []
servprov = []
setupapi = []
shellapi = []
shellscalingapi = []
shlobj = []
shlobjidl = []
shlobjidl_core = []
shtypes = []
spapidef = []
sporder = []
sql = []
sqlext = []
sqltypes = []
sqlucode = []
strmif = []
subauth = []
synchapi = []
sysinfoapi = []
textstor = []
threadpoolapiset = []
timeapi = []
timezoneapi = []
tlhelp32 = []
unknwnbase = []
urlhist = []
urlmon = []
usbspec = []
userenv = []
usp10 = []
vsbackup = []
vss = []
vsserror = []
vswriter = []
werapi = []
winbase = []
wincodec = []
wincodecsdk = []
wincon = []
wincred = []
wincrypt = []
winevt = []
wingdi = []
winhttp = []
wininet = []
winineti = []
winioctl = []
winnetwk = []
winnls = []
winnt = []
winreg = []
winscard = []
winsmcrd = []
winsock2 = []
winspool = []
winsvc = []
winuser = []
winver = []
ws2spi = []
ws2tcpip = []
xinput = []
#vc
excpt = []
limits = []
vadefs = []
vcruntime = []
#winrt
activation = []
hstring = []
inspectable = []
roapi = []
robuffer = []
roerrorapi = []
winstring = []
