[package]

name = "advapi32-sys"
version = "0.0.2"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to advapi32."
documentation = "https://retep998.github.io/doc/advapi32-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "advapi32"

[dependencies]
winapi = "*"
