[package]
name = "crypt32-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to crypt32. This crate is a placeholder for the future. If you are interested in this library feel free to get in touch with me: http://www.rustaceans.org/retep998"
documentation = "https://retep998.github.io/doc/crypt32-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "crypt32"

[dependencies]
winapi = "*"
