[package]
name = "d3dcompiler-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to d3dcompiler. This crate is a placeholder for the future. If you are interested in this library feel free to get in touch with me: http://www.rustaceans.org/retep998"
documentation = "https://retep998.github.io/doc/d3dcompiler-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "d3dcompiler"

[dependencies]
winapi = "*"
