[package]

name = "user32-sys"
version = "0.0.3"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to user32."
documentation = "https://retep998.github.io/doc/user32-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "user32"

[dependencies]
winapi = "*"
