[package]
name = "winapi-x86_64-pc-windows-gnu"
version = "0.4.0"
authors = ["Peter Atashian <retep998@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Import libraries for the x86_64-pc-windows-gnu target. Please don't use this crate directly, depend on winapi instead."
repository = "https://github.com/retep998/winapi-rs"
keywords = ["windows"]
include = ["/src/*", "/lib/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/build.rs"]
build = "build.rs"

[dependencies]
# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }

[features]
rustc-dep-of-std = ["core", "compiler_builtins"]
