[package]
name = "activeds-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "Contains function definitions for the Windows API library activeds. See winapi for types and constants."
documentation = "https://retep998.github.io/doc/activeds/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32"]
license = "MIT"
build = "build.rs"
links = "activeds"
[lib]
name = "activeds"
[dependencies]
winapi = { version = "0.2.4", path = "../.." }
[build-dependencies]
winapi-build = { version = "0.1.1", path = "../../build" }
