[package]
name = "bcrypt-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to bcrypt."
documentation = "https://retep998.github.io/doc/bcrypt-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "bcrypt"

[lib]
name = "bcrypt"

[dependencies]
winapi = { version = "*", path = "../.." }
[build-dependencies]
winapi-build = { version = "*", path = "../../build" }
