[package]
name = "bufferoverflowu-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "Contains function definitions for the Windows API library bufferoverflowu. See winapi for types and constants."
documentation = "https://retep998.github.io/doc/winapi/bufferoverflowu/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32"]
license = "MIT"
build = "build.rs"
[lib]
name = "bufferoverflowu"
[dependencies]
winapi = { version = "0.2.5", path = "../.." }
[build-dependencies]
winapi-build = { version = "0.1.1", path = "../../build" }
