[package]
name = "certidl-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "Contains function definitions for the Windows API library certidl. See winapi for types and constants."
documentation = "https://retep998.github.io/doc/certidl/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32"]
license = "MIT"
build = "build.rs"
links = "certidl"
[lib]
name = "certidl"
[dependencies]
winapi = { version = "0.2.4", path = "../.." }
[build-dependencies]
winapi-build = { version = "0.1.1", path = "../../build" }
