[package]
name = "comctl32-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to comctl32."
documentation = "https://retep998.github.io/doc/comctl32-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "comctl32"

[lib]
name = "comctl32"

[dependencies]
winapi = { version = "*", path = "../.." }
[build-dependencies]
winapi-build = { version = "*", path = "../../build" }
