[package]
name = "comdlg32-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to comdlg32."
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "comdlg32"

[lib]
name = "comdlg32"

[dependencies]
winapi = { version = "*", path = "../.." }
[build-dependencies]
winapi-build = { version = "*", path = "../../build" }
