[package]
name = "crypt32-sys"
version = "0.0.1"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "FFI bindings to crypt32."
documentation = "https://retep998.github.io/doc/crypt32-sys/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
build = "build.rs"
links = "crypt32"

[lib]
name = "crypt32"

[dependencies]
winapi = { version = "*", path = "../.." }
[build-dependencies]
winapi-build = { version = "*", path = "../../build" }
